--- a/index.html
+++ b/index.html
@@ -83,51 +83,58 @@
 
 
 
-    <section id="projects"> 
-      <h1>projects</h1>
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+    <section id="projects">
+      <div class="projects">
+        <div class="container">
+          <h1>projects</h1>
+          <div class="row">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row " >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row " >
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
+
         </div>
-      </div>
+      </div> 
     
     </section>
 
 
 
     <section id="resume">
-      <h1>resume</h1>
+      <div class="Resume">
+        <div class="container">
+          <h1>resume</h1>
       <div class="row">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
@@ -137,56 +144,64 @@
           </div>
         </div>
       </div>
+        </div>
+      </div>
+      
     </section>
 
 
 
 
     <section id="reviews">
-      <h1>reviews</h1>
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Akhona</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="reviews">
+        <div class="container">
+          <h1>reviews</h1>
+          <div class="row">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Akhona</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row " >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Yolanda</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row " >
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Yolanda</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row " >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Sihlandlo</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row " >
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Sihlandlo</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row " >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row " >
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row " >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Matthew</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row " >
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Matthew</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
     </section>
@@ -194,26 +209,31 @@
 
 
     <setion id="contact">
-      <form>
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="name" class="form-control" id="InputName" aria-describedby="name">
-          <div id="name" class="form-text"></div>
+      <div class="contact">
+        <div class="container">
+          <form>
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="name" class="form-control" id="InputName" aria-describedby="name">
+              <div id="name" class="form-text"></div>
+            </div>
+            <div class="mb-3">
+              <label for="Surname" class="form-label">Surname</label>
+              <input type="Surname" class="form-control" id="InputSurname">
+            </div>
+            <div class="mb-3">
+              <label for="Email" class="form-label">Email</label>
+              <input type="Email" class="form-control" id="InputEmail">
+            </div>
+            <div class="mb-3">
+              <label for="Message" class="form-label">Message</label>
+              <textarea class="form-control" id="Message" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
         </div>
-        <div class="mb-3">
-          <label for="Surname" class="form-label">Surname</label>
-          <input type="Surname" class="form-control" id="InputSurname">
-        </div>
-        <div class="mb-3">
-          <label for="Email" class="form-label">Email</label>
-          <input type="Email" class="form-control" id="InputEmail">
-        </div>
-        <div class="mb-3">
-          <label for="Message" class="form-label">Message</label>
-          <textarea class="form-control" id="Message" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
     </setion>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
