--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link mx-3" href="#resume">RESUME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="#reviews">REVIEWS</a>
+                    <a class="nav-link mx-3" href="#testimonials">TestimonialsS</a>
                 </li>
                    <a class="nav-link mx-3 sep-link" href="#contact">CONTACT</a>
                    </li>
@@ -166,14 +166,6 @@
           <div class="container text-center">
         </div>
       </div>
-          <!-- <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Education</h5>
-              <p class="card-text">Harry Gwala Senior Secondary School<br>Matric-grade 12 certificate<br>From 2016-2020</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div> -->
           </div>
         </div>
  
@@ -204,7 +196,7 @@
                <p>BOOTSTRAP</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
             <a href="#" class="btn btn-primary">Go somewhere</a></div>
-          </div>> -->
+          </div>
           <section id="Testimonials">
             <div class="testimonials">
               <div class="container">
@@ -221,16 +213,16 @@
                   </div>
                   <div class="col">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="" alt="Card image cap">
+                      <img class="card-img-top" src="https://lebomtomboti.github.io/portPhotos/Mna.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Yolanda</h5>
-                        <p class="card-text">She is adaptable and flexible, able to adjust to new situations and environments with ease. Maintains a positive outlook on life, approaching challenges with optimism and a can-do attitude.She is an easy going person. Working with her is always smooth and efficient. She is open to new ideas, and she is reliable. In stressful situations she is able to remain calm, which naturally creates a relaxed environment.</p>
+                        <p class="card-text">She is adaptable and flexible, able to adjust to new situations and environments with ease. Maintains a positive outlook on life, approaching challenges with optimism and a can-do attitude.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="https://lebomtomboti.github.io/portPhotos/20240422_122239.jpg" alt="Card image cap">
+                      <img class="card-img-top" src="https://lebomtomboti.github.io/portPhotos/Mna.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Sihlandlo</h5>
                         <p class="card-text">Her attention to detail and creativity shine through in every task she undertakes. Her contributions never fail to impress and elevate our team's work to the next level. Her innovative thinking and problem-solving skills have made a significant impact on our projects. Her ability to think outside the box brings fresh perspectives to every challenge we face.</p>
@@ -260,17 +252,6 @@
                 </div>
               </div>
             </div>
-          </section>
-      <!-- <div class="row"> -->
-
-        <!-- <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">HTML</h5>
-            <p class="card-text">Beginner</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div> -->
-        <!-- </div>
-
       
     </section>
     <setion id="contact">
