--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
          
           <div class="home-button">
-            <button class="home-btn border-0 text-white py-2 px-5 fs-5">view Projects</button>
+            <a class="nav-link mx-3" href="#projects"><button class="home-btn border-0 text-white py-2 px-5 fs-5">view Projects</button></a>
           </div>
         </div>
         <div class="social-icons">
@@ -136,7 +136,7 @@
                     <p>During our first few weeks at the academy, we learned CSS and HTML. My first task was to code a keyboard using CSS, which challenged me and furthered my understanding of HTML.
                     </p>
                     <div class="btn">
-                      <button class="buttoni bg-danger border-0 p-2"><a href="https://github.com/lebomtomboti/endmodule.git"></a>Github</button>
+                      <button class="buttoni bg-danger border-0 p-2"><a href="https://github.com/lebomtomboti/keyboard.git"></a>Github</button>
                       <button class="buttoni bg-danger border-0 p-2"><a href="https://keyboard-khaki.vercel.app/">Vercel</a></button>
                     </div>
                   </div>
