--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
           </div>
         </div>
         <div class="social-icons">
-          <i class="bi bi-github fs-3"></i>
+          <div class="row">
+            <div class="col" width="100">
+              <a href="https://github.com/lebomtomboti"><i class="bi bi-github fs-3"></i></a>
+            </div>
+          </div>
           <i class="bi bi-linkedin fs-3"></i>
         </div>
 
