--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                   <div class="col-5">
                     <p>This is one of the projects we did, which involved cloning the front page of an e-commerce site that sells cars. Our lecturer reviewed and proofread it.</p>
                     <div class="btn">
-                  <button class="buttoni bg-danger border-0 p-2">Github</button>
-                  <button class="buttoni bg-danger border-0 p-2">Vercel</button>
+                  <button class="buttoni bg-danger border-0 p-2"><a href="https://github.com/lebomtomboti/wednesday.git"></a>Github</button>
+                  <button class="buttoni bg-danger border-0 p-2"><a href="https://wednesday2.vercel.app/">Vercel</a></button>
                 </div>
                   </div>
                 </div>
